--- a/Specs.html
+++ b/Specs.html
@@ -84,6 +84,7 @@
         <li><strong>Prototype Assets:</strong>
         <p>-Phaser Audio Example
             -Click On: <a href=http://soundbible.com/1280-Click-On.html>link</a>
+            -Heart Beat: Mike Koenig, <a href=http://soundbible.com/1612-Slow-HeartBeat.html>link</a>
         -Phaser Button Example
         -Phaser Timer Example
             -Drag Camera: <a href=http://www.html5gamedevs.com/topic/2410-drag-the-camera/>link</a>
