--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <div id="game"></div>
         <div id="readme">
          <p>To move, click + drag. Then click to select.</p>
+         <p>(This is a protoype of 1 event, currently unwinnable)</p>
         <h1><b>Paul Brown</b>: Home</h1>
         <h2>Curses</h2>
             <div class="container">
